--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -15,6 +15,7 @@
 	tr tr { background: none !important;}
 	h1 { margin: 0;}
 	td td:first-child { text-transform: capitalize; }
+  button { float: right;}
 </style>
 </head>
 <body>
@@ -24,5 +25,6 @@
 <h1>Retire.js</h1>
 <table id="results">
 </table>
+<button id="copy_urls">Copy URLs</button>
 </body>
 </html>
